Fix submit btn width on small screens

--- a/src/styles/_custom-classes.scss
+++ b/src/styles/_custom-classes.scss
@@ -70,6 +70,12 @@
 	}
 }
 
+@media (width > 481px) {
+	.custom-btn-width {
+		width: 20%;
+	}
+}
+
 .contact-form > :not(button) {
 	margin-bottom: 1.5rem;
 }
